# serialization-benchmark-rs

./: Cargo.toml  Makefile  README.md  build.rs  compile-flatc.sh
.github/workflows/: ci.yml
fb_tonic_demo/: Cargo.toml  README.md  build.rs
fb_tonic_demo/src/: client.rs  server.rs
fb_tonic_demo/src/util/: common.rs  fb.helloworld.Greeter.rs  fbgreeting.fbs  message.fbs  message_generated.rs  mod.rs  my_game.rs  service.proto
serialization-benchmark/: Cargo.toml  build.rs
serialization-benchmark/src/: main.rs  util.rs
serialization-benchmark/src/util/: fbperson_generated.rs  pbperson.proto
src/: main.rs  util.rs
src/util/: fbperson.fbs  pbperson.rs
