[package]
name = "serialization-benchmark-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
flatbuffers = "24.3.25"
fury = { git= "https://github.com/apache/incubator-fury.git", branch = "main" }
lazy_static = "1.4.0"
prettytable-rs = "0.10.0"
prost = "0.12.4"
sysinfo = "0.30.11"

[build-dependencies]
tonic-build = "0.11.0"
