[workspace.package]
name = "serialization-benchmark-rs"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
# In alphabetical order
members = [
    "fb_tonic_demo",
]

[workspace.dependencies]
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive", "env"] }
flatbuffers = "24.3.25"
fury = { git= "https://github.com/apache/incubator-fury.git", branch = "main" }
lazy_static = "1.4.0"
prettytable-rs = "0.10.0"
prost = "0.12.4"
sysinfo = "0.30.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.11.0"

[workspace.build-dependencies]
tonic-build = "0.11.0"
