[package]
name = "serialization-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
flatbuffers = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
prettytable-rs = { workspace = true }
sysinfo = { workspace = true }
fury = { workspace = true }
clap = { workspace = true }
lazy_static = { workspace = true }

[build-dependencies]
protoc-bin-vendored = "3.0.0"
tonic-build = "0.11.0"
flatc-rust = "*"
